# synereo.github.io

./: .gitignore  CNAME  README.md  _config.yml  brooklyn.html  index.html  jiraissue.html  sublime-project
Synereo/: LICENSE  Synereo.cabal  contact.markdown  index.html  rho.markdown  site.hs  social.markdown
Synereo/css/: default.css
Synereo/templates/: default.html
_includes/: analytics.html  footer.html  ga.html  header.html  mc_form.html
_layouts/: get-involved.html  home.html  home_new.html  learn-more.html  post.html
_posts/: 2014-10-17-synereo-is-awesome.markdown  2014-11-03-why-do-we-even-need-a-new-social-network.markdown  2014-11-14-three-ways-to-start-a-revolution.markdown  2015-01-22-synereo-network-dynamics-chapter-2.markdown  2015-02-03-welcome-to-jekyll.markdown  2015-02-07-synereo-2.markdown  2015-02-07-why-synereo.markdown  2015-02-09-hello-world.markdown  2015-02-10-social-contracts-pt.markdown
_sass/: _base.scss  _home.scss  _layout.scss  _learn-more.scss  _parallax.scss
blog/: index.html
css/: home.scss  learn-more.scss  main.scss
css/brooklyn/: flexslider.css  reset.css  responsive-nav.css  style.css  unsemantic-grid.css  ut-fancyslider.css  ut-fontface.css  ut-responsive-grid.css  ut-superfish.css  ut.animate.css  ut.portfolio.style.css  ut.shortcode.css  ut.table.style.css
css/brooklyn-child/: style.css  ut.shortcode.css
css/revslider/: settings.css
css/ut-shortcodes/: font-awesome.css  ut.elastislide.css  ut.fancyrotator.css  ut.shortcode.css
fonts/: myriad.eot
get-involved/: index.html
learn-more/: index.html
(+55 files in other folders)
